# Anchor

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  install.sh
.github/workflows/: release.yml
src/: lib.rs  updater.rs
src/daemon/: mod.rs  protocol.rs  server.rs
src/graph/: builder.rs  persistence.rs
src/graphql/: mod.rs  query.rs  schema.rs
src/mcp/: tools.rs
src/parser/: extractor.rs
src/parser/queries/: api.rs  csharp.rs  java.rs  kotlin.rs  ruby.rs
src/query/: context.rs  mod.rs  search.rs  types.rs
src/regex/: ast.rs  derivative.rs  mod.rs  parser.rs
src/storage/: fs.rs
src/watcher/: mod.rs
tests/: README.md  benchmark.rs
