[package]
name = "anchor-sdk"
version = "0.1.4"
edition = "2021"
description = "LSP for AI."
license = "Apache-2.0"
repository = "https://github.com/Tharun-10Dragneel/Anchor"
keywords = ["ai", "code-intelligence", "mcp", "lsp", "graph"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"
authors = ["Anchor Team"]

[lib]
name = "anchor"
path = "src/lib.rs"

[[bin]]
name = "anchor"
path = "src/bin/cli.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# File system
tokio = { version = "1.0", features = ["full"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1.0", features = ["v4", "serde"] } 

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI (optional, for the binary)
clap = { version = "4.0", features = ["derive"] }

# Config parsing
toml = "0.5"

# Graph engine
petgraph = "0.6"
bincode = "1.3"

# AST parsing (tree-sitter + language grammars)
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-cpp = "0.23"
# tree-sitter-kotlin = "0.3"  # Disabled: uses older tree-sitter version
tree-sitter-swift = "0.7.1"

# File traversal (.gitignore-aware)
ignore = "0.4"

# File system watching
notify = "7.0"
notify-debouncer-mini = "0.5"

# Parallelism
rayon = "1.10"

# GraphQL
async-graphql = "7.0"

# Unix process utilities
libc = "0.2"

# Self-updater
reqwest = { version = "0.11", features = ["blocking", "json"] }
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
tempfile = "3.0"
